fixing feature main text width on tablet

--- a/styles.css
+++ b/styles.css
@@ -356,7 +356,7 @@ p, span {
   }
 
   .feature-main-txt {
-    width: 75%;
+    width: 13.25rem;
   }
 
   .feature-sub-txt {
